Code analysis and cleanup